<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="currency_exchange">Currency exchange</string>
    <string name="from">From</string>
    <string name="from_country">Select Country</string>
    <string name="to_country">Select Country</string>
    <string name="gmail.com">"@gmail.com"</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="link"> " to get information about symbol or code"</string>
    <string name="click_here">Click here </string>
    <string name="share">Share</string>
</resources>